c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_for_header_clause.c
int main(void) {
    for (int i = 0; i < 10; i = i + 1; )
        ;
    return 0;
}